<resources>
    <string name="app_name">Calculator</string>
    <string name="button_clear">CE</string>
    <string name="button_clear_all">C</string>
    <string name="button_delete">←</string>
    <string name="button_plus">+</string>
    <string name="button_digit_1">1</string>
    <string name="button_digit_2">2</string>
    <string name="button_digit_3">3</string>
    <string name="button_minus">-</string>
    <string name="button_digit_4">4</string>
    <string name="button_digit_5">5</string>
    <string name="button_digit_6">6</string>
    <string name="button_multiply">*</string>
    <string name="button_digit_7">7</string>
    <string name="button_digit_8">8</string>
    <string name="button_digit_9">9</string>
    <string name="button_divide">/</string>
    <string name="button_digit_0">0</string>
    <string name="button_xor">^</string>
    <string name="button_rest">%</string>
    <string name="button_equal">=</string>
    <string name="tag_other_button">OTHER_BUTTON</string>
    <string name="tag_digit_button">DIGIT_BUTTON</string>
    <string name="app_day_theme">App day theme</string>
    <string name="app_night_theme">App night theme</string>
    <string name="default_day_theme">Default day theme</string>
    <string name="default_night_theme">Default night theme</string>
    <string name="apply">APPLY</string>
    <string name="action_settings">Settings</string>
</resources>