<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <RadioGroup
        android:id="@+id/themes_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/app_day_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_day_theme" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/app_night_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_night_theme" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/default_day_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_day_theme" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/default_night_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_night_theme" />
    </RadioGroup>

    <Button
        android:id="@+id/apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply" />
</androidx.appcompat.widget.LinearLayoutCompat>